--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ option(HAS_MEMORY_BREAKPOINTS "Add support for memory breakpoints to the interpr
 option(USE_LTO "Use LTO for building" ON)
 option(BUILD_RPCS3_TESTS "Build RPCS3 unit tests." OFF)
 option(RUN_RPCS3_TESTS "Run RPCS3 unit tests. Requires BUILD_RPCS3_TESTS" OFF)
+option(GAMEMODE_CHOICE "Choose whether to enable GameMode features or not." ON)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/buildfiles/cmake")
 
@@ -166,11 +167,10 @@ endif()
 
 ## Look for Gamemode if its installed on Linux
 if(LINUX)
-    find_program(GAMEMODE_FOUND gamemoded) ## Only works if gamemode is installed on system (might include lib32 case)
-    if(GAMEMODE_FOUND)
+    ## User chooses whether to Enable GameMode features or not
+    if(GAMEMODE_CHOICE STREQUAL "ON")
          add_compile_definitions(GAMEMODE_AVAILABLE)
     endif()
-    message(GAMEMODE_AVAILABLE="${GAMEMODE_AVAILABLE}")
 endif()
 
 # TODO: do real installation, including copying directory structure
