patch_manager: make patches selectable by double click

--- a/rpcs3/rpcs3.vcxproj.filters
+++ b/rpcs3/rpcs3.vcxproj.filters
@@ -1439,6 +1439,9 @@
     <ClInclude Include="gamemode_control.h">
       <Filter>rpcs3</Filter>
     </ClInclude>
+    <ClInclude Include="rpcs3qt\custom_tree_widget.h">
+      <Filter>Gui\widgets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
