--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -123,7 +123,7 @@ jobs:
       matrix:
         include:
           - name: Intel
-            build_sh: "arch -X86_64 .ci/build-mac.sh"
+            build_sh: .ci/build-mac.sh
             UPLOAD_COMMIT_HASH: 51ae32f468089a8169aaf1567de355ff4a3e0842
             UPLOAD_REPO_FULL_NAME: rpcs3/rpcs3-binaries-mac
           - name: Apple Silicon
