cmake: simplify code

--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -10,16 +10,6 @@ include(CheckFunctionExists)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(ADDITIONAL_LIBS "")
-if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    #on some Linux distros shm_unlink and similar functions are in librt only
-    list(APPEND ADDITIONAL_LIBS "rt")
-elseif(NOT WIN32 AND NOT CMAKE_CXX_FLAGS MATCHES "LIBICONV_PLUG")
-    #it seems like glibc includes the iconv functions we use but other libc
-    #implementations like the one on OSX don't seem implement them
-    list(APPEND ADDITIONAL_LIBS "iconv")
-endif()
-
 if(UNIX AND NOT APPLE AND NOT ANDROID)
     add_compile_definitions(DATADIR="${CMAKE_INSTALL_FULL_DATADIR}/rpcs3")
     # Optionally enable X11 for window management
@@ -78,8 +68,16 @@ if (NOT ANDROID)
             3rdparty::libcurl
             3rdparty::zlib
             3rdparty::opencv
-            3rdparty::fusion
-            ${ADDITIONAL_LIBS})
+            3rdparty::fusion)
+
+    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+        #on some Linux distros shm_unlink and similar functions are in librt only
+        target_link_libraries(rpcs3_lib PRIVATE rt)
+    elseif(NOT WIN32 AND NOT CMAKE_CXX_FLAGS MATCHES "LIBICONV_PLUG")
+        #it seems like glibc includes the iconv functions we use but other libc
+        #implementations like the one on OSX don't seem implement them
+        target_link_libraries(rpcs3_lib PRIVATE iconv)
+    endif()
 
     # Unix display manager
     if(X11_FOUND)
@@ -106,19 +104,16 @@ if (NOT ANDROID)
     endif()
 
     # Build rpcs3 executable
+    add_executable(rpcs3 WIN32 MACOSX_BUNDLE)
     if(WIN32)
-        add_executable(rpcs3 WIN32)
         target_sources(rpcs3 PRIVATE rpcs3.rc)
         target_compile_definitions(rpcs3 PRIVATE UNICODE _UNICODE)
     elseif(APPLE)
-        add_executable(rpcs3 MACOSX_BUNDLE)
         target_sources(rpcs3 PRIVATE rpcs3.icns update_helper.sh)
         set_source_files_properties(update_helper.sh PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
         set_target_properties(rpcs3
             PROPERTIES
                 MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/rpcs3.plist.in")
-    else()
-        add_executable(rpcs3)
     endif()
 
     target_sources(rpcs3
@@ -137,17 +132,12 @@ if (NOT ANDROID)
 
     # Copy icons to executable directory
     if(APPLE)
-        if (CMAKE_BUILD_TYPE MATCHES "Debug" OR CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
-            set(QT_DEPLOY_FLAGS "-no-strip")
-        else()
-            set(QT_DEPLOY_FLAGS "")
-        endif()
         qt_finalize_target(rpcs3)
         add_custom_command(TARGET rpcs3 POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/rpcs3.icns $<TARGET_FILE_DIR:rpcs3>/../Resources/rpcs3.icns
             COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/Icons $<TARGET_FILE_DIR:rpcs3>/../Resources/Icons
             COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/GuiConfigs $<TARGET_FILE_DIR:rpcs3>/../Resources/GuiConfigs
-            COMMAND "${MACDEPLOYQT_EXECUTABLE}" "${PROJECT_BINARY_DIR}/bin/rpcs3.app" "${QT_DEPLOY_FLAGS}")
+            COMMAND "${MACDEPLOYQT_EXECUTABLE}" "${PROJECT_BINARY_DIR}/bin/rpcs3.app" "$<$<CONFIG:Debug,RelWithDebInfo>:-no-strip>")
     elseif(UNIX)
         add_custom_command(TARGET rpcs3 POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/Icons $<TARGET_FILE_DIR:rpcs3>/Icons
