--- a/rpcs3/VKGSRender.vcxproj
+++ b/rpcs3/VKGSRender.vcxproj
@@ -46,6 +46,7 @@
     <ClInclude Include="Emu\RSX\VK\vkutils\data_heap.h" />
     <ClInclude Include="Emu\RSX\VK\vkutils\descriptors.h" />
     <ClInclude Include="Emu\RSX\VK\vkutils\barriers.h" />
+    <ClInclude Include="Emu\RSX\VK\vkutils\ex.h" />
     <ClInclude Include="Emu\RSX\VK\vkutils\framebuffer_object.hpp" />
     <ClInclude Include="Emu\RSX\VK\vkutils\garbage_collector.h" />
     <ClInclude Include="Emu\RSX\VK\vkutils\image.h" />
@@ -100,6 +101,7 @@
     <ClCompile Include="Emu\RSX\VK\vkutils\chip_class.cpp" />
     <ClCompile Include="Emu\RSX\VK\vkutils\commands.cpp" />
     <ClCompile Include="Emu\RSX\VK\vkutils\data_heap.cpp" />
+    <ClCompile Include="Emu\RSX\VK\vkutils\ex.cpp" />
     <ClCompile Include="Emu\RSX\VK\vkutils\image.cpp" />
     <ClCompile Include="Emu\RSX\VK\vkutils\image_helpers.cpp" />
     <ClCompile Include="Emu\RSX\VK\vkutils\instance.cpp" />
