--- a/3rdparty/zstd/CMakeLists.txt
+++ b/3rdparty/zstd/CMakeLists.txt
@@ -1,6 +1,10 @@
-# zstd
-# Select the version of zstd to use, default is builtin
-if(NOT USE_SYSTEM_ZSTD)
+if(USE_SYSTEM_ZSTD)
+  message(STATUS "RPCS3: using shared zstd")
+  pkg_check_modules(zstd REQUIRED IMPORTED_TARGET libzstd)
+  add_library(3rdparty_zstd INTERFACE)
+  target_link_libraries(3rdparty_zstd INTERFACE PkgConfig::zstd)
+  target_include_directories(3rdparty_zstd INTERFACE PkgConfig::RtMidi)
+else()
   option(ZSTD_BUILD_PROGRAMS "BUILD PROGRAMS" OFF)
   option(ZSTD_BUILD_SHARED "BUILD SHARED LIBRARIES" OFF)
   option(ZSTD_BUILD_STATIC "BUILD STATIC LIBRARIES" ON)
@@ -8,9 +12,4 @@ if(NOT USE_SYSTEM_ZSTD)
   add_subdirectory(zstd/build/cmake EXLUDE_FROM_ALL)
   add_library(3rdparty_zstd INTERFACE)
   target_link_libraries(3rdparty_zstd INTERFACE libzstd_static)
-else()
-  message(STATUS "RPCS3: using VCPKG zstd")
-  find_package(zstd CONFIG REQUIRED)
-  add_library(3rdparty_zstd INTERFACE)
-  target_link_libraries(3rdparty_zstd INTERFACE zstd::libzstd)
 endif()
