--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -483,7 +483,7 @@ jobs:
 
       - name: Build RPCS3
         if: ${{ matrix.compiler == 'clang-cl' }}
-        shell: cmd
+        shell: bash
         run: .ci/build-windows-clang-cl.sh
 
       - name: Save build Ccache
