--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,9 +133,13 @@ if(MSVC)
 endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  add_compile_options(-msse4.1 -mavx2 -mfma -march=native -O3)
+  if (NOT CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
+    add_compile_options(-msse4.1 -mavx2 -mfma -march=native -O3)
+  else()
+    add_compile_options(-O3)
+  endif()
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-  add_compile_options(/arch:AVX2)
+  add_compile_options(/arch:AVX2 /O2)
 endif()
 
 if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
